--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -71,6 +72,11 @@ dependencies {
 
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+//    implementation 'com.android.support:multidex:1.0.3'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
